# coinbase-tradebot

./: .gitignore  .gitmodules  Lint.sh  README.md  Run.sh  TODO  Venv.source  mypy.ini  requirements.txt  test.py
cex/: Run.sh  Venv.source  test.py
cex/comm/: rest.py
coinbase/: Debug.sh  Graph.sh  Lint.sh  PNL.py  README.md  Run.sh  SellPrices.sh  Shape.sh  TODO  TRACKING.txt  Venv.source  Wallet.sh  orderbook-v2.json  phase_data-v2.csv  phase_data.csv  requirements.txt
coinbase/doc/: PRODUCTS.txt  STATES.txt  math.ods
coinbase/graph/: graph.py  phase_graphs.py  requirements.txt  shape.py
coinbase/sandbox/: test.py
coinbase/src/: 3main.py  TODO  context.py  debug.py  main.py  newmain.py  pnl.py  print_allocations.py  print_html_history.py  print_html_orders.py  print_wallet.py  settings.py  wallet.py
cpp/: .gitignore  CMakeLists.txt  Makefile  README  watchdog.sh
cpp/cmake/: cpr.cmake  cxxflags.cmake  headers.cmake
cpp/graph/: go.sh  graph.py  requirements.txt
cpp/schema/: historical.sql  spread_trader.sql  version1.sql
cpp/src/: BotContext.h  DataModel.h  PeriodicPrinter.h  PeriodicTimeUpdater.cpp  Time.cpp  Time.h  TradeBot.cpp  TradeBot.h  Version1.h  main.cpp
cpp/src/algorithm/: Version1.cpp
cpp/src/algorithms/: Version1.cpp  Version1.h
cpp/src/cli/: order_pairs.cpp  query_order.cpp
cpp/src/comm/: CoinbaseApi.cpp  CoinbaseApi.h  CoinbaseInterface.h  CoinbaseRestClient.cpp  CoinbaseRestClient.h  RestClient.cpp  RestClient.h  WebsocketClient.cpp  WebsocketClient.h
cpp/src/core/: ActionQueue.h  ActionThreadPool.cpp  ActionThreadPool.h  BotContext.cpp  BotContext.h  DataController.cpp  DataController.h  DataModel.cpp  DataProcessor.h  DataSource.h  PeriodicPrinter.cpp  PeriodicPrinter.h  PeriodicTimeUpdater.cpp  PeriodicTimeUpdater.h  ThreadedDataSource.cpp  ThreadedDataSource.h  TradeBot.cpp  TradeBot.h  main.cpp
cpp/src/database/: Database.cpp  Database.h  DatabaseConnection.cpp  DatabaseConnection.h  DatabaseResult.cpp  DatabaseResult.h  DatabaseValue.cpp  DatabaseValue.h
cpp/src/historical/: BtcHistoricalWriter.cpp  BtcHistoricalWriter.h  PendingProfitsCalc.cpp  PendingProfitsCalc.h  ProfitsReader.cpp  ProfitsReader.h  ProfitsWriter.cpp  ProfitsWriter.h  WalletHistoricalWriter.cpp  WalletHistoricalWriter.h
cpp/src/mock/: MockCoinbase.cpp  MockCoinbase.h  MockLock.cpp  MockLock.h  MockMarket.cpp  MockMarket.h  MockMode.cpp  MockMode.h  MockUserTrades.cpp  MockUserTrades.h
cpp/src/models/: BtcPrice.cpp  BtcPrice.h  CoinbaseFeeTier.cpp  CoinbaseFeeTier.h  CoinbaseInit.cpp  CoinbaseInit.h  CoinbaseOrder.h  CoinbaseOrderBook.cpp  CoinbaseOrderBook.h  CoinbaseWallet.cpp  CoinbaseWallet.h  PendingProfits.cpp  PendingProfits.h  Profits.cpp  Profits.h  Time.cpp  Time.h
cpp/src/pairs/: OrderPair.cpp  OrderPair.h  OrderPairDb.cpp  OrderPairDb.h  OrderPairMarketEngine.cpp  OrderPairMarketEngine.h  OrderPairStateMachine.cpp  OrderPairStateMachine.h  OrderPairTrader.cpp  OrderPairTrader.h  OrderPairUtils.cpp  OrderPairUtils.h
cpp/src/sources/: CoinbaseCredential.cpp  CoinbaseCredential.h  CoinbaseMarket.cpp  CoinbaseMarket.h  CoinbaseUserInfo.cpp  CoinbaseUserInfo.h  CoinbaseUserTrades.cpp  CoinbaseUserTrades.h
cpp/src/traders/: BaseTraderConfig.h  MarketTimeTraderConfig.h  OrderPair.h  OrderPairDb.cpp  OrderPairDb.h  OrderPairStateMachine.h  OrderPairTrader.cpp  SpreadTrader.cpp  SpreadTrader.h  StaticTrader.cpp  StaticTrader.h  TimeTrader.cpp  TimeTrader.h
cpp/src/utils/: Any.h  IntegerUtils.cpp  IntegerUtils.h  Log.cpp  Log.h  LoggerStreambuf.cpp  LoggerStreambuf.h  MarketInfo.cpp  MarketInfo.h  SteadyClock.cpp  SteadyClock.h  TypeInfo.h  Uuid.cpp  Uuid.h  Variadic.h
cpp/tensorflow/: .gitignore  CMakeLists.txt  Makefile  tensorflow.cmake
cpp/tensorflow/python/: main.py  nocritic.py  simple.py  torch.py
cpp/tensorflow/rl-test/: CMakeLists.txt  README
cpp/tensorflow/simple-test/: CMakeLists.txt  main.cpp
cpp/tensorflow/trading-test/: CMakeLists.txt  main.cpp
gtb/: main.py
gtb/core/: api.py  bot.py  context.py  settings.py  thread.py  version.py
gtb/inspect/: graph.py  parse_demand.py  print_demand_graph.py  print_html_history.py  print_html_orders.py  print_html_pnl.py  print_html_spread_stats.py  print_html_wallet.py  print_volume_graph.py  volume.py
gtb/market/: current.py  prices.py  top.py  volume.py
gtb/noti/: notifications.py  queue.py  sms.py  smtp.py
gtb/orders/: cancel.py  history.py  order.py  order_book.py  order_pair.py  processor.py
sandbox/: jwt.py
utils/: debug.py  pricebook.py  transactions.py  wallet.py
www/flask/: Run.sh  (+6 more)
(+43 files in other folders)
